fix: fix notification alignment

--- a/app/components/Notification/Notification.css
+++ b/app/components/Notification/Notification.css
@@ -35,8 +35,9 @@
   background-color: var(--edit-color-positive);
 }
 
-.message > * {
-  vertical-align: middle;
+.message {
+  display: flex;
+  align-items: center;
 }
 
 .message svg {
